--- a/ruoyi-admin/pom.xml
+++ b/ruoyi-admin/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>ruoyi-member</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-system</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
