--- a/ruoyi-cms/pom.xml
+++ b/ruoyi-cms/pom.xml
@@ -25,6 +25,11 @@
             <groupId>com.ruoyi</groupId>
             <artifactId>ruoyi-framework</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-system</artifactId>
+        </dependency>
     </dependencies>
 
 
